--- a/food.html
+++ b/food.html
@@ -20,19 +20,19 @@
             name="food"
             value="Burgers, fries and fried chicken"
           />
-          burgers and fried chicken</label
+          burgers</label
         >
       </div>
       <div class="food-item">
         <img src="food/dog.jpeg" alt="dog" />
         <label
-          ><input type="checkbox" name="food" value="hotdog" /> hotdog</label
+          ><input type="checkbox" name="food" value="hotdog" /> hotdog(veg)</label
         >
       </div>
       <div class="food-item">
         <img src="food/koreanfood.jpeg" alt="koreanfood" />
         <label
-          ><input type="checkbox" name="food" value="Korean food" /> korean
+          ><input type="checkbox" name="food" value="Korean food" /> korean/chinese
           food</label
         >
       </div>
@@ -50,7 +50,7 @@
       </div>
       <div class="food-item">
         <img src="food/steak.jpeg" alt="steak" />
-        <label><input type="checkbox" name="food" value="steak" /> steak</label>
+        <label><input type="checkbox" name="food" value="steak" /> Non veg(🥺)</label>
       </div>
       <div class="food-item">
         <img src="food/sushi.jpeg" alt="sushi" />
